# midea_ac_lan

./: .gitignore  .hacs  .pr_agent.toml  .pre-commit-config.yaml  A1_hans.md  AGENTS.md  B6.md  B6_hans.md  CA.md  CC.md  CF.md  CF_hans.md  CHANGELOG.md  CLAUDE.md  DA.md  DA_hans.md  DB_hans.md  DC.md  DC_hans.md  E1.md  E1_hans.md  E2.md  E3.md  E6_hans.md  E8_hans.md  EA_hans.md  ED.md  ED_hans.md  FA_hans.md  FB.md  FC.md  FIX_DNS_PROBLEM.md  GEMINI.md  HACS_INSTALL_BG.md  LICENSE  README.md  README_FIX_BG.md  README_REMINCHEV.md  README_hans.md  commitlint.config.mjs  (+23 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: .pr_agent.toml  CONTRIBUTING.md  CONTRIBUTING.zh.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-issue_zh-cn.yml  2-issue_en.yml  3-enhancement_zh-cn.yml  4-enhancement_en.yml  config.yml
.github/linters/: .eslintrc.yml  .flake8  .python-lint  .yaml-lint.yml
.github/prompts/: issue-analysis.prompt.yml  reply-summary.prompt.yml
.github/workflows/: codeql.yml  issue-ai-analysis.yml  issue-open.yml  issue-translator.yml  lint.yml  linter.yml  pr_agent.yml  release-please.yml  release.yml  validate.yml
custom_components/midea_ac_lan/: __init__.py  ac_bb_diagnostics.py  ac_c1_diagnostics.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  diagnostics.py  fa_oscillate_patch.py  fan.py  humidifier.py  light.py  lock.py  manifest.json  midea_devices.py  midea_entity.py  number.py  select.py  sensor.py  services.yaml  switch.py  time.py  water_heater.py
custom_components/midea_ac_lan/midea/backports/: enum.py  myenum.py
custom_components/midea_ac_lan/midea/core/: cloud.py  crc8.py  device.py  discover.py  message.py  packet_builder.py  security.py
custom_components/midea_ac_lan/midea/devices/: __init__.py
custom_components/midea_ac_lan/midea/devices/a1/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/ac/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/b0/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/b1/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/b3/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/b4/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/b6/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/bf/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/c2/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/c3/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/ca/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/cc/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/cd/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/ce/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/cf/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/da/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/db/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/dc/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/e1/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/e2/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/e3/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/e6/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/e8/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/ea/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/ec/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/ed/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/fa/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/fb/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/fc/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/fd/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/x13/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/x26/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/x34/: device.py  message.py
custom_components/midea_ac_lan/midea/devices/x40/: device.py  message.py
custom_components/midea_ac_lan/translations/: bg.json  de.json  en.json  es.json  fr.json  hu.json  it.json  ru.json  sk.json  zh-Hans.json
custom_components/midea_lan/: __init__.py  config_flow.py  fan.py  light.py  lock.py  midea_devices.py  midea_entity.py
custom_components/midea_lan/translations/: de.json  en.json  fr.json  hu.json  ru.json  sk.json  zh-Hans.json
doc/: 13.md  13_hans.md  26.md  26_hans.md  34.md  34_hans.md  40.md  40_hans.md  A1.md  A1_hans.md  AC.md  AC_hans.md  AD.md  AD_hans.md  B0.md  B0_hans.md  B1.md  B1_hans.md  B3.md  B3_hans.md  B4.md  B4_hans.md  B6.md  B6_hans.md  BF.md  BF_hans.md  C2.md  C2_hans.md  C3.md  C3_hans.md  CA.md  CA_hans.md  CC.md  CC_hans.md  CD.md  CD_hans.md  CE.md  CE_hans.md  CF.md  CF_hans.md  (+32 more)
scripts/: install.sh  mypy.sh  run.sh  setup.sh
